src/main/java/automath/antlr/firstgrammar/FirstGrammarParser.java
// Generated from FirstGrammar.g4 by ANTLR 4.1
package automath.antlr.firstgrammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FirstGrammarParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__10=1, T__9=2, T__8=3, T__7=4, T__6=5, T__5=6, T__4=7, T__3=8, T__2=9, 
		T__1=10, T__0=11, NUM_VAR=12, PRED_VAR=13, PRED_OP=14, INT=15, WHITESPACE=16, 
		NEWLINE=17;
	public static final String[] tokenNames = {
		"<INVALID>", "'->'", "'&'", "'^'", "')'", "'+'", "'-'", "'*'", "'('", 
		"'/'", "'~'", "'|'", "NUM_VAR", "PRED_VAR", "PRED_OP", "INT", "WHITESPACE", 
		"NEWLINE"
	};
	public static final int
		RULE_file = 0, RULE_statement = 1, RULE_predicate = 2, RULE_impPred = 3, 
		RULE_orPred = 4, RULE_andPred = 5, RULE_notPred = 6, RULE_pPred = 7, RULE_equationPredicate = 8, 
		RULE_predicateOperator = 9, RULE_predicateVariable = 10, RULE_expression = 11, 
		RULE_aExp = 12, RULE_sExp = 13, RULE_mExp = 14, RULE_dExp = 15, RULE_eExp = 16, 
		RULE_pExp = 17, RULE_term = 18, RULE_numberVariable = 19, RULE_number = 20;
	public static final String[] ruleNames = {
		"file", "statement", "predicate", "impPred", "orPred", "andPred", "notPred", 
		"pPred", "equationPredicate", "predicateOperator", "predicateVariable", 
		"expression", "aExp", "sExp", "mExp", "dExp", "eExp", "pExp", "term", 
		"numberVariable", "number"
	};

	@Override
	public String getGrammarFileName() { return "FirstGrammar.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public FirstGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FileContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public FileContext file() {
			return getRuleContext(FileContext.class,0);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FirstGrammarVisitor ) return ((FirstGrammarVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		try {
			setState(46);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(42); statement();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(43); statement();
				setState(44); file();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(FirstGrammarParser.NEWLINE, 0); }
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FirstGrammarVisitor ) return ((FirstGrammarVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48); predicate();
			setState(49); match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PredicateContext extends ParserRuleContext {
		public ImpPredContext impPred() {
			return getRuleContext(ImpPredContext.class,0);
		}
		public PredicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predicate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).enterPredicate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).exitPredicate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FirstGrammarVisitor ) return ((FirstGrammarVisitor<? extends T>)visitor).visitPredicate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PredicateContext predicate() throws RecognitionException {
		PredicateContext _localctx = new PredicateContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_predicate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51); impPred(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImpPredContext extends ParserRuleContext {
		public int _p;
		public OrPredContext orPred() {
			return getRuleContext(OrPredContext.class,0);
		}
		public ImpPredContext impPred(int i) {
			return getRuleContext(ImpPredContext.class,i);
		}
		public List<ImpPredContext> impPred() {
			return getRuleContexts(ImpPredContext.class);
		}
		public ImpPredContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ImpPredContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_impPred; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).enterImpPred(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).exitImpPred(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FirstGrammarVisitor ) return ((FirstGrammarVisitor<? extends T>)visitor).visitImpPred(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImpPredContext impPred(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ImpPredContext _localctx = new ImpPredContext(_ctx, _parentState, _p);
		ImpPredContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, RULE_impPred);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(54); orPred(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(61);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ImpPredContext(_parentctx, _parentState, _p);
					pushNewRecursionContext(_localctx, _startState, RULE_impPred);
					setState(56);
					if (!(2 >= _localctx._p)) throw new FailedPredicateException(this, "2 >= $_p");
					setState(57); match(1);
					setState(58); impPred(3);
					}
					} 
				}
				setState(63);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class OrPredContext extends ParserRuleContext {
		public int _p;
		public List<OrPredContext> orPred() {
			return getRuleContexts(OrPredContext.class);
		}
		public OrPredContext orPred(int i) {
			return getRuleContext(OrPredContext.class,i);
		}
		public AndPredContext andPred() {
			return getRuleContext(AndPredContext.class,0);
		}
		public OrPredContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public OrPredContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_orPred; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).enterOrPred(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).exitOrPred(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FirstGrammarVisitor ) return ((FirstGrammarVisitor<? extends T>)visitor).visitOrPred(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OrPredContext orPred(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		OrPredContext _localctx = new OrPredContext(_ctx, _parentState, _p);
		OrPredContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, RULE_orPred);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(65); andPred(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(72);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new OrPredContext(_parentctx, _parentState, _p);
					pushNewRecursionContext(_localctx, _startState, RULE_orPred);
					setState(67);
					if (!(2 >= _localctx._p)) throw new FailedPredicateException(this, "2 >= $_p");
					setState(68); match(11);
					setState(69); orPred(3);
					}
					} 
				}
				setState(74);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class AndPredContext extends ParserRuleContext {
		public int _p;
		public AndPredContext andPred(int i) {
			return getRuleContext(AndPredContext.class,i);
		}
		public List<AndPredContext> andPred() {
			return getRuleContexts(AndPredContext.class);
		}
		public NotPredContext notPred() {
			return getRuleContext(NotPredContext.class,0);
		}
		public AndPredContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public AndPredContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_andPred; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).enterAndPred(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).exitAndPred(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FirstGrammarVisitor ) return ((FirstGrammarVisitor<? extends T>)visitor).visitAndPred(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AndPredContext andPred(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		AndPredContext _localctx = new AndPredContext(_ctx, _parentState, _p);
		AndPredContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, RULE_andPred);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(76); notPred();
			}
			_ctx.stop = _input.LT(-1);
			setState(83);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new AndPredContext(_parentctx, _parentState, _p);
					pushNewRecursionContext(_localctx, _startState, RULE_andPred);
					setState(78);
					if (!(2 >= _localctx._p)) throw new FailedPredicateException(this, "2 >= $_p");
					setState(79); match(2);
					setState(80); andPred(3);
					}
					} 
				}
				setState(85);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class NotPredContext extends ParserRuleContext {
		public PPredContext pPred() {
			return getRuleContext(PPredContext.class,0);
		}
		public NotPredContext notPred() {
			return getRuleContext(NotPredContext.class,0);
		}
		public NotPredContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_notPred; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).enterNotPred(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).exitNotPred(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FirstGrammarVisitor ) return ((FirstGrammarVisitor<? extends T>)visitor).visitNotPred(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NotPredContext notPred() throws RecognitionException {
		NotPredContext _localctx = new NotPredContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_notPred);
		try {
			setState(89);
			switch (_input.LA(1)) {
			case 10:
				enterOuterAlt(_localctx, 1);
				{
				setState(86); match(10);
				setState(87); notPred();
				}
				break;
			case 8:
			case NUM_VAR:
			case PRED_VAR:
			case INT:
				enterOuterAlt(_localctx, 2);
				{
				setState(88); pPred();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PPredContext extends ParserRuleContext {
		public PredicateVariableContext predicateVariable() {
			return getRuleContext(PredicateVariableContext.class,0);
		}
		public ImpPredContext impPred() {
			return getRuleContext(ImpPredContext.class,0);
		}
		public EquationPredicateContext equationPredicate() {
			return getRuleContext(EquationPredicateContext.class,0);
		}
		public PPredContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pPred; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).enterPPred(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).exitPPred(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FirstGrammarVisitor ) return ((FirstGrammarVisitor<? extends T>)visitor).visitPPred(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PPredContext pPred() throws RecognitionException {
		PPredContext _localctx = new PPredContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_pPred);
		try {
			setState(97);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(91); match(8);
				setState(92); impPred(0);
				setState(93); match(4);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(95); equationPredicate();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(96); predicateVariable();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EquationPredicateContext extends ParserRuleContext {
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public PredicateOperatorContext predicateOperator() {
			return getRuleContext(PredicateOperatorContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public EquationPredicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equationPredicate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).enterEquationPredicate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).exitEquationPredicate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FirstGrammarVisitor ) return ((FirstGrammarVisitor<? extends T>)visitor).visitEquationPredicate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EquationPredicateContext equationPredicate() throws RecognitionException {
		EquationPredicateContext _localctx = new EquationPredicateContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_equationPredicate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99); expression();
			setState(100); predicateOperator();
			setState(101); expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PredicateOperatorContext extends ParserRuleContext {
		public TerminalNode PRED_OP() { return getToken(FirstGrammarParser.PRED_OP, 0); }
		public PredicateOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predicateOperator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).enterPredicateOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).exitPredicateOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FirstGrammarVisitor ) return ((FirstGrammarVisitor<? extends T>)visitor).visitPredicateOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PredicateOperatorContext predicateOperator() throws RecognitionException {
		PredicateOperatorContext _localctx = new PredicateOperatorContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_predicateOperator);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103); match(PRED_OP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PredicateVariableContext extends ParserRuleContext {
		public TerminalNode PRED_VAR() { return getToken(FirstGrammarParser.PRED_VAR, 0); }
		public PredicateVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predicateVariable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).enterPredicateVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).exitPredicateVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FirstGrammarVisitor ) return ((FirstGrammarVisitor<? extends T>)visitor).visitPredicateVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PredicateVariableContext predicateVariable() throws RecognitionException {
		PredicateVariableContext _localctx = new PredicateVariableContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_predicateVariable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105); match(PRED_VAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public AExpContext aExp() {
			return getRuleContext(AExpContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FirstGrammarVisitor ) return ((FirstGrammarVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107); aExp(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AExpContext extends ParserRuleContext {
		public int _p;
		public SExpContext sExp() {
			return getRuleContext(SExpContext.class,0);
		}
		public AExpContext aExp(int i) {
			return getRuleContext(AExpContext.class,i);
		}
		public List<AExpContext> aExp() {
			return getRuleContexts(AExpContext.class);
		}
		public AExpContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public AExpContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_aExp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).enterAExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).exitAExp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FirstGrammarVisitor ) return ((FirstGrammarVisitor<? extends T>)visitor).visitAExp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AExpContext aExp(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		AExpContext _localctx = new AExpContext(_ctx, _parentState, _p);
		AExpContext _prevctx = _localctx;
		int _startState = 24;
		enterRecursionRule(_localctx, RULE_aExp);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(110); sExp(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(117);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new AExpContext(_parentctx, _parentState, _p);
					pushNewRecursionContext(_localctx, _startState, RULE_aExp);
					setState(112);
					if (!(2 >= _localctx._p)) throw new FailedPredicateException(this, "2 >= $_p");
					setState(113); match(5);
					setState(114); aExp(3);
					}
					} 
				}
				setState(119);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class SExpContext extends ParserRuleContext {
		public int _p;
		public SExpContext sExp(int i) {
			return getRuleContext(SExpContext.class,i);
		}
		public MExpContext mExp() {
			return getRuleContext(MExpContext.class,0);
		}
		public List<SExpContext> sExp() {
			return getRuleContexts(SExpContext.class);
		}
		public SExpContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public SExpContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_sExp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).enterSExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).exitSExp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FirstGrammarVisitor ) return ((FirstGrammarVisitor<? extends T>)visitor).visitSExp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SExpContext sExp(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		SExpContext _localctx = new SExpContext(_ctx, _parentState, _p);
		SExpContext _prevctx = _localctx;
		int _startState = 26;
		enterRecursionRule(_localctx, RULE_sExp);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(121); mExp(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(128);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new SExpContext(_parentctx, _parentState, _p);
					pushNewRecursionContext(_localctx, _startState, RULE_sExp);
					setState(123);
					if (!(2 >= _localctx._p)) throw new FailedPredicateException(this, "2 >= $_p");
					setState(124); match(6);
					setState(125); sExp(3);
					}
					} 
				}
				setState(130);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class MExpContext extends ParserRuleContext {
		public int _p;
		public List<MExpContext> mExp() {
			return getRuleContexts(MExpContext.class);
		}
		public MExpContext mExp(int i) {
			return getRuleContext(MExpContext.class,i);
		}
		public DExpContext dExp() {
			return getRuleContext(DExpContext.class,0);
		}
		public MExpContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public MExpContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_mExp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).enterMExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FirstGrammarListener ) ((FirstGrammarListener)listener).exitMExp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FirstGrammarVisitor ) return ((FirstGrammarVisitor<? extends T>)visitor).visitMExp(this);
			else return visitor.visitChildren(this);
		}
	}
